Migrate ku langcode to ckb per #2886

--- a/locales/all.json
+++ b/locales/all.json
@@ -18,6 +18,7 @@
   "bxr",
   "ca",
   "cak",
+  "ckb",
   "cnh",
   "cs",
   "cv",
@@ -61,7 +62,6 @@
   "kk",
   "ko",
   "kpv",
-  "ku",
   "kw",
   "ky",
   "lg",
