--- a/locales/native-names.json
+++ b/locales/native-names.json
@@ -16,6 +16,7 @@
   "bxr": "Буряад",
   "ca": "català",
   "cak": "Kaqchikel",
+  "ckb": "کوردی",
   "cnh": "Laiholh (Hakha)",
   "cs": "Čeština",
   "cv": "Чӑвашла",
@@ -58,7 +59,6 @@
   "kk": "Қазақ тілі",
   "ko": "한국어",
   "kpv": "Коми",
-  "ku": "کوردی",
   "kw": "Kernowek",
   "ky": "Кыргызча",
   "lg": "Luganda",
