--- a/locales/translated.json
+++ b/locales/translated.json
@@ -11,6 +11,7 @@
   "ca",
   "cak",
   "cnh",
+  "ckb",
   "cs",
   "cv",
   "cy",
@@ -44,7 +45,6 @@
   "kab",
   "kk",
   "ko",
-  "ku",
   "kw",
   "ky",
   "lg",
