2020-10-07 - Sentence Collector Export + Update Locales

--- a/locales/native-names.json
+++ b/locales/native-names.json
@@ -16,7 +16,7 @@
   "bxr": "Буряад",
   "ca": "català",
   "cak": "Kaqchikel",
-  "ckb": "ckb",
+  "ckb": "کوردی ناوەندی",
   "cnh": "Laiholh (Hakha)",
   "co": "co",
   "cs": "Čeština",
@@ -42,7 +42,7 @@
   "fy-NL": "Frysk",
   "ga-IE": "Gaeilge",
   "gl": "Galego",
-  "gn": "gn",
+  "gn": "Guarani",
   "ha": "Hausa",
   "he": "עברית",
   "hi": "हिंदी",
