Locales/sentences-only release

--- a/locales/native-names.json
+++ b/locales/native-names.json
@@ -16,12 +16,12 @@
   "bxr": "Буряад",
   "ca": "català",
   "cak": "Kaqchikel",
-  "ckb": "کوردی",
+  "ckb": "کوردی ناوەندی",
   "cnh": "Laiholh (Hakha)",
+  "co": "co",
   "cs": "Čeština",
   "cv": "Чӑвашла",
   "cy": "Cymraeg",
-  "co": "co",
   "da": "Dansk",
   "de": "Deutsch",
   "dsb": "Dolnoserbšćina",
@@ -42,7 +42,7 @@
   "fy-NL": "Frysk",
   "ga-IE": "Gaeilge",
   "gl": "Galego",
-  "gn": "gn",
+  "gn": "Guarani",
   "ha": "Hausa",
   "he": "עברית",
   "hi": "हिंदी",
@@ -100,6 +100,7 @@
   "syr": "ܣܘܼܪܝܝܐ",
   "ta": "தமிழ்",
   "te": "తెలుగు",
+  "tg": "Тоҷикӣ",
   "th": "ไทย",
   "tl": "Tagalog",
   "tr": "Türkçe",
