Add native name for Basaa

--- a/locales/native-names.json
+++ b/locales/native-names.json
@@ -8,6 +8,7 @@
   "as": "অসমীয়া",
   "ast": "Asturianu",
   "az": "Azərbaycanca",
+  "bas": "Ɓàsàa",
   "be": "Беларуская",
   "bg": "Български",
   "bn": "বাংলা",
