Hotfix for latest sentences/langs

--- a/locales/all.json
+++ b/locales/all.json
@@ -50,6 +50,7 @@
   "hi",
   "hr",
   "hsb",
+  "ht",
   "hu",
   "hy-AM",
   "hyw",
@@ -73,13 +74,17 @@
   "lij",
   "lt",
   "lv",
+  "mai",
   "mdf",
   "mg",
   "mhr",
   "mk",
   "ml",
   "mn",
+  "mos",
+  "mr",
   "mrj",
+  "ms",
   "mt",
   "my",
   "myv",
@@ -90,7 +95,9 @@
   "oc",
   "or",
   "pa-IN",
+  "pap-AW",
   "pl",
+  "ps",
   "pt",
   "rm-sursilv",
   "rm-vallader",
@@ -100,9 +107,11 @@
   "sah",
   "sc",
   "scn",
+  "shi",
   "si",
   "sk",
   "sl",
+  "so",
   "sq",
   "sr",
   "sv-SE",
@@ -117,6 +126,7 @@
   "tt",
   "uby",
   "udm",
+  "ug",
   "uk",
   "ur",
   "uz",
