--- a/locales/native-names.json
+++ b/locales/native-names.json
@@ -73,6 +73,8 @@
   "mk": "Македонски",
   "ml": "മലയാളം",
   "mn": "Монгол хэл",
+  "mr": "मराठी",
+  "ms": "Bahasa Melayu",
   "mt": "Malti",
   "my": "ဗမာ",
   "myv": "Эрзякс",
@@ -83,7 +85,9 @@
   "oc": "Occitan",
   "or": "ଓଡ଼ିଆ",
   "pa-IN": "ਪੰਜਾਬੀ",
+  "pap-AW": "pap-AW",
   "pl": "polski",
+  "ps": "ps",
   "pt": "Português",
   "rm-sursilv": "romontsch sursilvan",
   "rm-vallader": "Rumantsch vallader",
@@ -108,6 +112,7 @@
   "tl": "Tagalog",
   "tr": "Türkçe",
   "tt": "Татарча",
+  "ug": "ئۇيغۇرچە",
   "uk": "Українська",
   "ur": "اردو",
   "uz": "O‘zbek",
