Hotfix other localized languages

--- a/locales/translated.json
+++ b/locales/translated.json
@@ -14,6 +14,7 @@
   "cak",
   "ckb",
   "cnh",
+  "co",
   "cs",
   "cv",
   "cy",
@@ -64,6 +65,7 @@
   "mn",
   "mr",
   "mt",
+  "myv",
   "nb-NO",
   "ne-NP",
   "nl",
